# advent-of-code-2024

./: Cargo.toml
day-01/part-1/: Cargo.toml
day-01/part-1/inputs/: sample.txt
day-01/part-1/src/: main.rs
day-01/part-2/: Cargo.toml
day-01/part-2/inputs/: input.txt
day-01/part-2/src/: main.rs
day-02/part-1/: Cargo.toml
day-02/part-1/src/: main.rs
day-02/part-2/: Cargo.toml
day-02/part-2/src/: main.rs
day-03/part-1/: Cargo.toml
day-03/part-1/src/: main.rs
day-03/part-2/: Cargo.toml
day-03/part-2/inputs/: input.txt
day-03/part-2/src/: main.rs
day-04/part-1/: Cargo.toml
day-04/part-1/src/: main.rs
day-04/part-2/: Cargo.toml
day-04/part-2/src/: main.rs
day-05/part-1/: Cargo.toml
day-05/part-1/src/: main.rs
day-05/part-2/: Cargo.toml
day-05/part-2/src/: main.rs
day-06/part-1/: Cargo.toml
day-06/part-1/src/: main.rs
day-06/part-2/: Cargo.toml
day-06/part-2/src/: main.rs
day-07/part-1/: Cargo.toml
day-07/part-1/src/: main.rs
day-07/part-2/: Cargo.toml
day-07/part-2/src/: main.rs
day-08/part-1/: Cargo.toml
day-08/part-1/src/: main.rs
day-08/part-2/: Cargo.toml
day-08/part-2/src/: main.rs
shared/src/: lib.rs  position.rs  stdin.rs
