[workspace]
resolver = "2"

members = [
	"day-01/part-1",
	"day-01/part-2",
	"day-02/part-1",
	"day-02/part-2",
	"day-03/part-1",
	"day-03/part-2",
	"day-04/part-1",
	"day-04/part-2",
	"day-05/part-1",
	"day-05/part-2",
	"day-06/part-1",
	"day-06/part-2",
	"day-07/part-1",
	"day-07/part-2",
	"day-08/part-1",
	"day-08/part-2",
	"shared",
]
